@@ -36,6 +36,7 @@ Changed
     Add cloud & desktop icons to image lists to indicate different variants
     Improve search remote image server result layout
     Use date ranges instead of created dates for project analytics
+    Apply user.user-data as instance config on 1 off cloud-config deploy
 
 Fixed
     First run doesn't toggle passwords properly (#390)
